# COPG_GPU

./: CMakeListes.txt  CMakeLists.txt  README.md  companion.cpp  config.h  main.cpp
.github/workflows/: main.yml
